<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_recipes">

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="ru.netology.nerecipe.ui.AllFragment"
        android:label="@string/title_all_recipes"
        tools:layout="@layout/recipes_feed">
        <action
            android:id="@+id/action_navigation_recipes_to_recipeFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/all_to_edit"
            app:destination="@id/editFragment">
            <argument
                android:name="recipeId"
                app:argType="long" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="ru.netology.nerecipe.ui.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_navigation_favorites_to_recipeFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/favorites_to_create"
            app:destination="@id/editFragment">
            <argument
                android:name="recipeId"
                app:argType="long" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/detailsFragment"
        android:name="ru.netology.nerecipe.ui.DetailsFragment"
        android:label="@string/recipe_fragment_label"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="recipeId"
            app:argType="long" />
        <action
            android:id="@+id/detailsToEdit"
            app:destination="@id/editFragment">
            <argument
                android:name="recipeId"
                app:argType="long" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_new_recipe"
        android:name="ru.netology.nerecipe.ui.CreateFragment"
        android:label="@string/create_recipe"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/editFragment"
        android:name="ru.netology.nerecipe.ui.EditFragment"
        android:label="@string/edit_recipe"
        tools:layout="@layout/fragment_create">
        <argument
            android:name="recipeId"
            app:argType="long" />

    </fragment>

</navigation>