<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize">

    <LinearLayout
        android:id="@+id/data_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/picture_src"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_picture_src_hint"
            app:endIconDrawable="@drawable/ic_download_24"
            app:endIconMode="custom"
            app:endIconTint="@color/color_activate_button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/picture_src_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/main_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:contentDescription="@string/recipe_picture_description"
            android:maxHeight="300dp"
            android:scaleType="fitCenter" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cuisine_category"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/cuisine_category_actv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cuisine_hint"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/estimate_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/estimate_time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/estimate_time_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingredients_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingredients_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/stages_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_stage_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/add_stage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="@string/save_recipe" />


    </LinearLayout>
</ScrollView>