<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/recipe_picture"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/shape"
            android:contentDescription="@string/recipe_picture_description"
            android:scaleType="fitCenter"
            tools:srcCompat="@drawable/buter" />

        <TextView
            android:id="@+id/title_text_view"
            style="@style/RecipeCardTextView.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            tools:text="Buter" />

        <TextView
            style="@style/RecipeCardTextView.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cuisine" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cuisine_text_view"
            style="@style/RecipeCardTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            style="@style/RecipeCardTextView.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/author_text_view"
            style="@style/RecipeCardTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_author_24"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            style="@style/RecipeCardTextView.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ingredients_text_view"
            style="@style/RecipeCardTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_ingredients_24dp"
            android:maxLines="50"
            tools:maxLines="3"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            style="@style/RecipeCardTextView.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cooking_time" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time_text_view"
            style="@style/RecipeCardTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_time_48dp"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            style="@style/RecipeCardTextView.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cooking_process" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/stages_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>