<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/recipe_picture"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/shape"
                android:contentDescription="@string/recipe_picture_description"
                android:scaleType="fitCenter"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/buter" />

            <TextView
                android:id="@+id/title_text_view"
                style="@style/RecipeCardTextView.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@id/recipe_picture"
                tools:text="Buter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu_details"
                style="@style/RecipeImageButton"
                app:icon="@drawable/ic_more_vert_48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/title_text_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/RecipeCardTextView.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:text="@string/cuisine"
            android:textColor="?attr/colorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cuisine_text_view"
            style="@style/RecipeCardTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            style="@style/RecipeCardTextView.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:text="@string/author"
            android:textColor="?attr/colorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/author_text_view"
            style="@style/RecipeCardTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_author_24"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            style="@style/RecipeCardTextView.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:text="@string/ingredients"
            android:textColor="?attr/colorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ingredients_text_view"
            style="@style/RecipeCardTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_ingredients_24dp"
            android:maxLines="50"
            tools:maxLines="3"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            style="@style/RecipeCardTextView.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:text="@string/cooking_time"
            android:textColor="?attr/colorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time_text_view"
            style="@style/RecipeCardTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_time_48dp"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            style="@style/RecipeCardTextView.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:text="@string/cooking_process"
            android:textColor="?attr/colorPrimary" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/stages_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>